[package]
name = "halfbit"
version = "0.0.0"
authors = ["Costin Ionescu <costin.ionescu@gmail.com>"]
edition = "2018"
description = "a free-standing collection of utilities"
license = "MIT"
homepage = "https://github.com/icostin/halfbit"
repository = "https://github.com/icostin/halfbit"
readme = "README.md"

[features]
default = []
use-libc = ["libc"]
use-std = []

[dependencies]
num = ">= 0.1"
libc = { version = "0.2", optional = true }

[dev-dependencies]
clap = "2"

[lib]
name = "halfbit"

[[example]]
name = "hb"
required-features = ["use-libc"]

